# interactive-shape-server

./: LICENSE  README.md  interactive-shape-server.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-9.12/8.0.2/flag-cache/: interactive-shape-server-0.1.0.0
assignment-1/: README.md
assignment-1/ShapeExample1-0.1.0.0/: ShapeExample1.cabal  example.hs  haskellllll.hs  haskellogo.hs
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/flag-cache/: HTTP-4000.3.7-Bu9PMQgKGbz9hGhVg4fSEv  HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  MissingH-1.4.0.1-4I5T4TbNA9RIo1FM0FgAP  ShapeExample1-0.1.0.0  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  blaze-svg-0.3.6.1-E6CYGgfBIFH476loEvWeGj  cabal-install-1.24.0.2  codec-0.2.1-BTYsi5enRqfJh1TzzeXiuU  ed25519-0.0.5.0-DOxHK22XPn0HrMBTHVASla  hackage-security-0.5.2.2-AlkKgHLtCjaLokE6wsTMRj  network-uri-2.6.1.0-7BN1tbB3iHQ2XgvmqLAYph  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  tar-0.5.0.3-60pC6grTbvG2zWoTgfDWBJ
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/lib/x86_64-linux-ghc-8.0.2/codec-0.2.1-BTYsi5enRqfJh1TzzeXiuU/Control/Monad/: Codec.dyn_hi  Codec.hi
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/lib/x86_64-linux-ghc-8.0.2/codec-0.2.1-BTYsi5enRqfJh1TzzeXiuU/Data/Aeson/: Codec.hi
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/lib/x86_64-linux-ghc-8.0.2/codec-0.2.1-BTYsi5enRqfJh1TzzeXiuU/Data/Binary/: Codec.dyn_hi
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/pkgdb/: codec-0.2.1-BTYsi5enRqfJh1TzzeXiuU.conf  package.cache
assignment-1/ShapeExample1-0.1.0.0/.stack-work/install/x86_64-osx/lts-9.12/8.0.2/flag-cache/: ShapeExample1-0.1.0.0
assignment-1/ShapeExample1-0.1.0.0/src/: .Server.hs.swp  Color.hs  Colors.hs  Main.hs  Render.hs  Server.hs  Shapes.hs  Styles.hs  Transforms.hs
assignment-1/ShapeExample1-0.1.0.0/static/: index.html
assignment-1/ShapeExample1-0.1.0.0/static-files/: index.html
assignment-1/ShapeServer/: ShapeServer.cabal  stack.yaml
assignment-1/ShapeServer/.stack-work/install/x86_64-osx/lts-9.12/8.0.2/flag-cache/: ShapeExample1-0.1.0.0  ShapeServer-0.1.0.0
assignment-1/ShapeServer/src/: Main.hs  Render.hs  Server.hs  Shapes.hs
interactive-shape-server/: README.md  interactive-shape-server.cabal
interactive-shape-server/.stack-work/install/x86_64-linux/lts-9.12/8.0.2/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  binary-bits-0.5-5C3nHVNpDc0FfsPl0JYlce  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  json-0.9.1-6pKnGehfA1F3y827uv04ov  (+7 more)
interactive-shape-server/src/: Shapes.hs  Styles.hs  Transforms.hs
interactive-shape-server/static/: sample-input.txt
src/: Render.hs
static/: sample-input.txt
(+5 files in other folders)
