name:                ShapeExample1
version:             0.1.0.0
synopsis:            An Interactive Shape Server
description:         An interactive svg shape server
homepage:            https://github.com/nating/functional/assignment-1
license:             BSD3
license-file:        LICENSE
author:              Geoffrey Natin
maintainer:          nating@tcd.ie
copyright:           2017 Geoffrey Natin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ShapeExample1
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Render, Shapes, Transforms, Styles, Color
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       blaze-svg,
                       text,
                       base64-bytestring,
                       MissingH,
                       bytestring,
                       codec